-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 15
-
Component/s: client-libs
-
b19
-
generic
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8247228 | 13.0.4 | Sergey Bylokhov | P4 | Resolved | Fixed | b05 |
| JDK-8277844 | 11.0.15-oracle | Anton Litvinov | P4 | Resolved | Fixed | b01 |
| JDK-8245217 | 11.0.8 | Sergey Bylokhov | P4 | Resolved | Fixed | b04 |
| JDK-8246815 | openjdk8u272 | Sergey Bylokhov | P4 | Resolved | Fixed | b01 |
| JDK-8277935 | 8u331 | Anton Litvinov | P4 | Resolved | Fixed | b01 |
We have incorrect usage of such wrapper in the XToolkit class:
Toolkit creates AwtScreenData wrapper on top of the XToolkit.getDefaultScreenData()
https://hg.openjdk.java.net/jdk/jdk/file/321b6fbe6815/src/java.desktop/unix/classes/sun/awt/X11/XToolkit.java#l344
But unfortunately, this native method returns the wrong pointer to getDefaultConfig():
https://hg.openjdk.java.net/jdk/jdk/file/321b6fbe6815/src/java.desktop/unix/native/libawt_xawt/xawt/XToolkit.c#l134
getScreenData() should be used instead of getDefaultConfig() since native data for default configuration is bigger than screen data we most of the time read some "random" information about visual info.
- backported by
-
JDK-8245217 XToolkit: Misread of screen information memory
-
- Resolved
-
-
JDK-8246815 XToolkit: Misread of screen information memory
-
- Resolved
-
-
JDK-8247228 XToolkit: Misread of screen information memory
-
- Resolved
-
-
JDK-8277844 XToolkit: Misread of screen information memory
-
- Resolved
-
-
JDK-8277935 XToolkit: Misread of screen information memory
-
- Resolved
-
- relates to
-
JDK-8251840 Java_sun_awt_X11_XToolkit_getDefaultScreenData should not be in make/mapfiles/libawt_xawt/mapfile-vers
-
- Resolved
-
-
JDK-8076313 GraphicsEnvironment does not detect changes in count of monitors on Linux OS
-
- Resolved
-
- links to