8239819: XToolkit: Misread of screen information memory

Reviewed-by: prr