src/java.desktop/unix/classes/sun/awt/X11/XToolkit.java
@@ -211,7 +211,6 @@ public final class XToolkit extends UNIXToolkit implements Runnable {
     private static volatile int maxWindowWidthInPixels = -1;
     private static volatile int maxWindowHeightInPixels = -1;
 
-    static long awt_defaultFg; // Pixel
     private static XMouseInfoPeer xPeer;
 
     /**
@@ -339,9 +338,6 @@ public final class XToolkit extends UNIXToolkit implements Runnable {
                 log.finer("X locale modifiers are not supported, using default");
             }
             tryXKB();
-
-            AwtScreenData defaultScreen = new AwtScreenData(XToolkit.getDefaultScreenData());
-            awt_defaultFg = defaultScreen.get_blackpixel();
 
             arrowCursor = XlibWrapper.XCreateFontCursor(XToolkit.getDisplay(),
                 XCursorFontConstants.XC_arrow);
@@ -1493,7 +1489,6 @@ public final class XToolkit extends UNIXToolkit implements Runnable {
     }
 
     static native long getDefaultXColormap();
-    static native long getDefaultScreenData();
 
     /**
      * Returns a new input method adapter descriptor for native input methods.
@@ -2173,10 +2168,6 @@ public final class XToolkit extends UNIXToolkit implements Runnable {
             }
             time = timeoutTasks.firstKey();
         }
-    }
-
-    static long getAwtDefaultFg() {
-        return awt_defaultFg;
     }
 
     static boolean isLeftMouseButton(MouseEvent me) {
